# crates

./: .clang-format  .dockerignore  .gitignore  .npmrc  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  ccc.py  check_copyright.sh  deny.toml  improved.build.ninja  index.html  meta.sh  nextest.toml  package-lock.json  package.json  rust-toolchain.toml  test_runner.py
.cargo/: config.toml
docs/: vscode.md
examples/: catdog.cc  comparable.cc  hashable.cc  hello.cc  widgets.cc
examples/http-simple/: Cargo.toml
examples/http-simple/src/: main.rs
examples/persons/: Cargo.toml  build.rs  openapi.yaml
examples/persons-api/: Cargo.toml  build.rs  openapi.yaml
examples/persons-api/src/: context.rs  layers.rs  main.rs  validators.rs
examples/persons-api/src/controllers/: mod.rs  persons.rs
examples/persons-api/src/migrations/: v1__create_persons_table.sql
examples/persons-api/src/models/: mod.rs  person.rs
examples/persons/src/: main.rs
examples/todo-app/: Cargo.toml  build.rs
examples/todo-app/src/: main.rs
examples/todo-app/web/: index.css  index.html  index.js  package-lock.json  package.json
examples/todo-app/web/src/: app.jsx  index.css  index.jsx  ipc.js
examples/webview-ipc/: Cargo.toml  app.html
examples/webview-ipc/src/: main.rs
examples/windows-webview2/: Cargo.toml  build.rs
examples/windows-webview2/src/: main.rs  webview2.rs  windows.rs
lib/berde/: Cargo.toml  README.md
lib/berde/src/: de.rs  json.rs  lib.rs  ser.rs  toml.rs  urlencoded.rs  yaml.rs
lib/berde/src/de/: json.rs  mod.rs
lib/bsqlite/: CHANGELOG.md  Cargo.toml  README.md
lib/bsqlite/examples/: bsqlite_enum_from_value.rs  bsqlite_open_wal.rs  bsqlite_query_args.rs  bsqlite_query_some.rs  bsqlite_raw_bind.rs  bsqlite_raw_bind_named.rs  bsqlite_simple.rs  bsqlite_struct_from_row.rs  bsqlite_struct_from_row_chrono.rs  bsqlite_struct_from_row_uuid.rs  bsqlite_tuples.rs
lib/bsqlite/src/: bind.rs  connection.rs  from_row.rs  lib.rs  migration.rs  statement.rs  utils.rs  value.rs
lib/bsqlite_derive/: CHANGELOG.md  Cargo.toml  README.md
lib/bsqlite_derive/src/: from_row.rs  from_value.rs  lib.rs  run_migrations.rs
lib/bwebview/: Cargo.toml  README.md  build.rs
lib/bwebview/examples/: bwebview-background.rs  bwebview-file-dialog.rs  bwebview-fullscreen.rs  bwebview-ipc.html  bwebview-ipc.rs  bwebview-multi-monitor.rs  bwebview-multi-window.rs  bwebview-simple.rs
lib/bwebview/examples/ipc/: Cargo.toml  app.html  build.rs
lib/bwebview/examples/ipc/src/: main.rs
lib/bwebview/src/: event.rs  event_loop.rs  file_dialog.rs  input.rs  lib.rs  monitor.rs  sizes.rs  webview.rs  window.rs
lib/http/: Cargo.toml  README.md
lib/http/src/: enums.rs  fetch.rs  lib.rs  method.rs  request.rs  response.rs  serve.rs  status.rs  version.rs
lib/indexmap/: Cargo.toml
lib/indexmap/src/: lib.rs
lib/local-ip-address/: Cargo.toml
lib/local-ip-address/src/: lib.rs
lib/mysql-client/: Cargo.toml  docker-compose.yml
lib/mysql-client/src/: connection.rs  error.rs  lib.rs  protocol.rs  types.rs  value.rs
lib/mysql-client/tests/: integration_tests.rs
lib/native-tls/: Cargo.toml  README.md  build.rs
lib/native-tls/examples/: native-tls-https-get.rs
lib/native-tls/src/: imp_macos.rs  imp_openssl.rs  imp_rustls.rs  imp_windows.rs  lib.rs
lib/native-tls/tests/certs/: expired-localhost.crt  expired-localhost.key  localhost.crt  localhost.key  wrong-host.crt  wrong-host.key
lib/native_tls/: Cargo.toml
lib/native_tls/src/: lib.rs
lib/openapi-generator/: Cargo.toml
lib/openapi-generator/src/: lib.rs  openapi.rs  utils.rs
lib/openapi-generator/src/generators/: mod.rs  rust.rs  typescript.rs
lib/rust-embed/: Cargo.toml
lib/rust-embed/src/: lib.rs
lib/simple-useragent/: CHANGELOG.md  Cargo.toml  README.md  build.rs  regexes.yaml
lib/simple-useragent/examples/: simple-useragent-parser.rs
lib/simple-useragent/src/: lib.rs
lib/simple_logger/: Cargo.toml
lib/simple_logger/src/: lib.rs
lib/small-http/: CHANGELOG.md  Cargo.toml  README.md
lib/small-http/examples/: small-http-client-pool.rs  small-http-client.rs  small-http-get.rs  small-http-post.rs  small-http-simple.rs  small-http-ws-upgrade.rs  small-https-client.rs
lib/small-http/src/: client.rs  enums.rs  header_map.rs  lib.rs  request.rs  response.rs  serve.rs
lib/small-router/: CHANGELOG.md  Cargo.toml  README.md
lib/small-router/examples/: small-router-context.rs  small-router-error.rs  small-router-layers.rs  small-router-simple.rs
lib/small-router/src/: lib.rs
lib/small-websocket/: Cargo.toml
lib/small-websocket/examples/: small-websocket-simple.rs
lib/small-websocket/src/: lib.rs
lib/sqlite/: .gitattributes  Cargo.toml  README.md  build.rs
lib/sqlite/src/: connection.rs  error.rs  lib.rs  statement.rs  sys.rs  value.rs
lib/tiny-webview/: Cargo.toml  README.md  build.rs
lib/tiny-webview/examples/: tiny-webview-background.rs  tiny-webview-fullscreen.rs  tiny-webview-multi-monitor.rs  tiny-webview-multi-window.rs  tiny-webview-simple.rs
lib/tiny-webview/examples/ipc/: Cargo.toml  app.html  build.rs
lib/tiny-webview/examples/ipc/src/: main.rs
lib/tiny-webview/examples/simple/: Cargo.toml
lib/tiny-webview/examples/simple/src/: main.rs
lib/tiny-webview/src/: event.rs  lib.rs
lib/useragent/: Cargo.toml  build.rs  regexes.yaml
lib/useragent/examples/: useragent-parser.rs
lib/useragent/src/: lib.rs
lib/uuid/: Cargo.toml
lib/uuid/src/: lib.rs
lib/validate/: Cargo.toml
lib/validate/src/: lib.rs
public/: index.html  style.css
src/: args.rs  brick.rs  context.rs  http.rs  interpreter.rs  json.rs  lexer.rs  lib.rs  main.rs  parser.rs  sqlite.rs  thread_pool.rs  transpiler.rs  types.rs  utils.rs  uuid.rs  wall.rs
std/: List.cc  Map.cc  Object.cc  Object.hh  Set.hh  String.cc  String.hh  prelude.c  prelude.h
tests/: 01_class_bare.cc  02_field_get.cc  03_field_prop.cc  04_field_deinit.cc  05_field_default.cc  21_list.cc  (+9 more)
xtask/: Cargo.toml
xtask/src/: build.rs  checks.rs  main.rs  metadata.rs  process.rs  utils.rs
(+250 files in other folders)
