[workspace]
members = ["bin/*", "examples/*", "lib/*", "lib/*/examples/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Bastiaan van der Plaat <bastiaan.v.d.plaat@gmail.com>"]
repository = "https://github.com/bplaat/crates"

[workspace.lints.rust]
unreachable_pub = "deny"
unused_qualifications = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = "fat"
strip = true

[patch.crates-io]
# Path published libraries with local versions
bsqlite = { path = "lib/bsqlite" }
bsqlite_derive = { path = "lib/bsqlite_derive" }
simple-useragent = { path = "lib/simple-useragent" }
small-http = { path = "lib/small-http" }
small-router = { path = "lib/small-router" }

# Patch some popular crates with my minimal alternatives
chrono = { path = "lib/chrono" }
dirs = { path = "lib/dirs" }
getrandom = { path = "lib/getrandom" }
libsqlite3-sys = { path = "lib/libsqlite3-sys" }
mime_guess = { path = "lib/mime_guess" }
rust-embed = { path = "lib/rust-embed" }
rust-embed-impl = { path = "lib/rust-embed-impl" }
threadpool = { path = "lib/threadpool" }
url = { path = "lib/url" }
uuid = { path = "lib/uuid" }
