[package]
name = "baksteen"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Event",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlSelectElement",
] }
