[workspace]
members = ["bin/*", "examples/*", "lib/*", "lib/*/examples/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Bastiaan van der Plaat <bastiaan.v.d.plaat@gmail.com>"]
repository = "https://github.com/bplaat/crates"

[workspace.lints.rust]
unreachable_pub = "deny"
unused_qualifications = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
panic = "abort"
overflow-checks = false

[patch.crates-io]
# Path published libraries with local versions
bsqlite = { path = "lib/bsqlite" }
bsqlite_derive = { path = "lib/bsqlite_derive" }
simple-useragent = { path = "lib/simple-useragent" }
small-http = { path = "lib/small-http" }
small-router = { path = "lib/small-router" }

# Patch some popular crates with my minimal alternatives
chrono = { path = "lib/chrono" }
copy_dir = { path = "lib/copy_dir" }
directories = { path = "lib/directories" }
dotenv = { path = "lib/dotenv" }
enable-ansi-support = { path = "lib/enable-ansi-support" }
getrandom = { path = "lib/getrandom" }
libsqlite3-sys = { path = "lib/libsqlite3-sys" }
local-ip-address = { path = "lib/local-ip-address" }
mime = { path = "lib/mime" }
mime_guess = { path = "lib/mime_guess" }
native_tls = { path = "lib/native_tls" }
rust-embed = { path = "lib/rust-embed" }
rust-embed-impl = { path = "lib/rust-embed-impl" }
semver = { path = "lib/semver" }
sha1 = { path = "lib/sha1" }
simple_logger = { path = "lib/simple_logger" }
terminal_size = { path = "lib/terminal_size" }
threadpool = { path = "lib/threadpool" }
url = { path = "lib/url" }
uuid = { path = "lib/uuid" }
winres = { path = "lib/winres" }
