[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
regex = { version = "1.13", default-features = false, features = [
    "unicode-perl",
] }
serde_json = "1.0"
