[package]
name = "example-http-simple"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
simple-useragent = { version = "0.1.2", features = ["serde"] }
small-http = { version = "0.2.1", features = ["json"] }
