[package]
name = "example-persons-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
bsqlite = { version = "0.1.2", features = ["uuid", "chrono"] }
chrono = { version = "0.4", default-features = false, features = [
    "now",
    "serde",
] }
const_format = "0.2"
dotenv = "0.15.0"
from_enum = { path = "../../lib/from_enum" }
log = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
simple_logger = "5.0.0"
small-http = { version = "0.2.0", features = ["json"] }
small-router = "0.2.0"
uuid = { version = "1.0", features = ["v7", "serde"] }
validate = { path = "../../lib/validate", features = ["serde"] }

[build-dependencies]
openapi-generator = { path = "../../lib/openapi-generator" }

# Bundle sqlite3 on platforms that don't have it
[target.'cfg(any(target_env = "musl", windows))'.dependencies]
bsqlite = { version = "0.1.2", features = ["bundled", "uuid", "chrono"] }
