[package]
name = "example-persons"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
http = { path = "../../lib/http", features = ["json"] }
router = { path = "../../lib/router" }
sqlite = { path = "../../lib/sqlite", features = ["derive", "chrono", "uuid"] }
validate = { path = "../../lib/validate", features = ["derive", "serde"] }

anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
uuid = { version = "1.11", features = ["serde", "v7"] }
