[package]
name = "example-persons"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
http = { path = "../../lib/http", features = ["json"] }
router = { path = "../../lib/router" }
sqlite = { path = "../../lib/sqlite", features = ["derive", "chrono", "uuid"] }
uuid = { path = "../../lib/uuid", features = ["v4", "v7", "serde"] }
validate = { path = "../../lib/validate", features = ["derive", "serde"] }

chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"

[target.'cfg(all(target_env = "musl"))'.dependencies]
sqlite = { path = "../../lib/sqlite", features = [
    "bundled",
    "derive",
    "chrono",
    "uuid",
] }
