[package]
name = "todo-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tiny-webview = { path = "../../lib/tiny-webview", features = ["rust-embed"] }

rust-embed = { version = "8.7", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde"] }
