[package]
name = "example-webview-ipc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
webview = { path = "../../lib/webview" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
minify-html = { path = "../../lib/minify-html" }
