[package]
name = "example-windows-webview2"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Bastiaan van der Plaat <bastiaan.v.d.plaat@gmail.com>"]

[lints.rust]
unreachable_pub = "deny"
unused_qualifications = "deny"
missing_docs = "deny"

[lints.clippy]
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
