[package]
name = "bsqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
bsqlite_derive = { path = "../bsqlite_derive", optional = true }
libsqlite3-sys = "0.31.0"
chrono = { version = "0.4", default-features = false, optional = true }
uuid = { version = "1.0", optional = true }

[features]
bundled = ["libsqlite3-sys/bundled"]
chrono = ["dep:chrono"]
derive = ["dep:bsqlite_derive"]
uuid = ["dep:uuid"]
