[package]
name = "bsqlite_derive"
version = "0.1.1"
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version = "1.65"
description = "The derive macro's for the bsqlite crate"
categories = ["database", "web-programming"]
keywords = ["sql", "sqlite", "database", "bsqlite"]
homepage = "https://github.com/bplaat/crates/tree/master/lib/bsqlite_derive"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
