[package]
name = "bwebview"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
directories = { version = "6.0.0", optional = true }
mime_guess = { version = "2.0", default-features = false, optional = true }
log = { version = "0.4.28", optional = true }
rust-embed = { version = "8.7", optional = true }
small-http = { version = "0.2.1", optional = true, default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"

[features]
default = ["log", "remember_window_state"]
custom_protocol = ["dep:small-http"]
log = ["dep:log"]
remember_window_state = ["dep:directories"]
rust-embed = ["custom_protocol", "dep:rust-embed", "dep:mime_guess"]
