[package]
name = "http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
threadpool = { path = "../threadpool" }
chrono = { version = "0.4", default-features = false, features = [
    "now",
], optional = true }
url = { path = "../url" }

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["date"]
date = ["dep:chrono"]
json = ["dep:serde", "dep:serde_json"]
