[package]
name = "indexmap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
berde = { path = "../berde", optional = true }

[dev-dependencies]
berde = { path = "../berde", features = ["json"] }

[features]
berde = ["dep:berde"]
