[package]
name = "local-ip-address"
version = "0.6.5+patch"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[target.'cfg(any(target_os = "macos", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
libc = "0.2"
