[package]
name = "native-tls"
version = "0.2.18+patch"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
vendored = ["dep:rustls", "dep:webpki-roots"]

[dependencies]
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
], optional = true }
webpki-roots = { version = "1", optional = true }

[dev-dependencies]
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
] }
rustls-pki-types = "1"

[lints]
workspace = true
