[package]
name = "openapi-generator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
indexmap = { version = "2.7.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
