[package]
name = "simple-useragent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A simple user agent parser library based on the uap-core regexes"
categories = ["parser-implementations"]
keywords = ["useragent", "user-agent", "uap", "uap-core"]
homepage = "https://github.com/bplaat/crates/tree/master/lib/simple-useragent"
repository = "https://github.com/bplaat/crates"
readme = "README.md"

[lints]
workspace = true

[dependencies]
postcard = { version = "1.1", default-features = false }
regex = { version = "1.11", default-features = false, features = [
    "unicode-perl",
] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"

[features]
serde = []
