[package]
name = "simple-useragent"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version = "1.65"
description = "A simple user agent parser library based on the uap-core regexes"
categories = ["parser-implementations", "web-programming"]
keywords = [
    "useragent",
    "user-agent",
    "useragent-parser",
    "user-agent-parser",
    "uap",
    "uap-core",
]
homepage = "https://github.com/bplaat/crates/tree/master/lib/simple-useragent"

[lints]
workspace = true

[dependencies]
regex = { version = "1.11", default-features = false, features = [
    "unicode-perl",
] }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"

[features]
serde = ["dep:serde"]
