[package]
name = "small-http"
version = "0.2.1"
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version = "1.65"
description = "A simple and small sync HTTP/1.1 server/client library"
categories = [
    "network-programming",
    "web-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]
keywords = ["http", "http-server", "http-client", "rest-api"]
homepage = "https://github.com/bplaat/crates/tree/master/lib/small-http"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "now",
], optional = true }
url = "2.5"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
threadpool = { version = "1.8", optional = true }

[dev-dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"

[features]
default = ["date", "multi-threaded"]
date = ["dep:chrono"]
json = ["dep:serde", "dep:serde_json"]
multi-threaded = ["dep:threadpool"]
