[package]
name = "small-router"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version = "1.65"
description = "A simple and small router for the small-http library"
categories = ["web-programming"]
keywords = ["router", "http", "rest-api"]
homepage = "https://github.com/bplaat/crates/tree/master/lib/small-router"

[lints]
workspace = true

[dependencies]
small-http = "0.1.0"
