[package]
name = "small-router"
version = "0.2.1"
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version = "1.65"
description = "A simple and small router for the small-http library"
categories = ["web-programming"]
keywords = ["router", "http", "rest-api"]
homepage = "https://github.com/bplaat/crates/tree/master/lib/small-router"

[lints]
workspace = true

[dependencies]
anyhow = "1"
log = { version = "0.4.28", optional = true }
small-http = { version = "0.2.1", default-features = false }

[features]
log = ["dep:log"]
