[package]
name = "small-websocket"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.22"
sha1 = "0.10.6"
small-http = { version = "0.1.0", default-features = false }

[dev-dependencies]
small-http = { version = "0.1.0" }
