[package]
name = "small-websocket"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.22"
getrandom = { version = "0.3.0", optional = true }
sha1 = "0.10.6"
small-http = { version = "0.1.0", default-features = false }
url = { version = "2.5.0", optional = true }

[dev-dependencies]
small-http = { version = "0.1.0" }

[features]
default = ["client"]
client = ["dep:getrandom", "dep:url"]
