[package]
name = "sqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
sqlite_derive = { path = "../sqlite_derive", optional = true }
libsqlite3-sys = "0.31.0"
time = { path = "../time", optional = true }
uuid = { path = "../uuid", optional = true }

[features]
bundled = ["libsqlite3-sys/bundled"]
derive = ["dep:sqlite_derive"]
time = ["dep:time"]
uuid = ["dep:uuid"]
