[package]
name = "tiny-webview"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
small-http = { version = "0.1.0", optional = true }

mime_guess = { version = "2.0", default-features = false, optional = true }
rust-embed = { version = "8.7", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"

[features]
default = ["remember_window_state", "ipc"]
remember_window_state = []
ipc = []
rust-embed = ["dep:rust-embed", "dep:small-http", "dep:mime_guess"]
