[package]
name = "useragent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
postcard = { version = "1.1", default-features = false }
regex = { version = "1.11", default-features = false, features = [
    "unicode-perl",
] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"

[features]
serde = []
