[package]
name = "uuid"
version = "1.0.0+patch"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
getrandom = { path = "../getrandom", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
v4 = ["dep:getrandom"]
v7 = ["dep:getrandom"]
serde = ["dep:serde"]
