[package]
name = "uuid"
version = "1.0.0+patch"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
getrandom = { version = "0.3.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
serde = ["dep:serde"]
v4 = ["dep:getrandom"]
v7 = ["dep:getrandom"]
