[package]
name = "validate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
url = { path = "../url", optional = true }
validate_derive = { path = "../validate_derive", optional = true }

lazy_static = { version = "1.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
regex = { version = "1.11", optional = true }

[features]
derive = ["dep:validate_derive"]
email = ["dep:lazy_static", "dep:regex", "validate_derive/email"]
url = ["dep:url", "validate_derive/url"]
serde = ["dep:serde"]
