[package]
name = "validate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
validate_derive = { path = "../validate_derive", optional = true }

serde = { version = "1.0", features = ["derive"], optional = true }
regex = { version = "1.11", default-features = false, optional = true }

[features]
derive = ["dep:validate_derive"]
email = ["dep:regex", "validate_derive/email"]
url = ["dep:regex", "validate_derive/url"]
serde = ["dep:serde"]
